--- a/bertopic_new.ipynb
+++ b/bertopic_new.ipynb
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1045,38 +1045,43 @@
          "customdata": [
           [
            0,
-           "天 | 子 | 知 | 下 | 王",
-           118
+           "次 | 贞 | 初 | 无 | 阳",
+           81
           ],
           [
            1,
-           "子 | 天 | 行 | 道 | 礼",
-           60
+           "天 | 故 | 无 | 可 | 下",
+           67
           ],
           [
            2,
-           "公 | 王 | 君 | 下 | 天",
-           42
+           "子 | 王 | 帝 | 无 | 天",
+           56
           ],
           [
            3,
-           "能 | 言 | 行 | 孔子 | 然",
-           40
+           "子 | 孔子 | 可 | 无 | 天",
+           55
           ],
           [
            4,
-           "天 | 王 | 大 | 能 | 孟子",
-           34
+           "天 | 大 | 子 | 夫 | 命",
+           49
           ],
           [
            5,
-           "测 | 仁 | 君子 | 次 | 忠",
-           28
+           "无 | 故 | 可 | 君 | 能",
+           36
           ],
           [
            6,
-           "王 | 子 | 君 | 天 | 下",
-           24
+           "道 | 故 | 言 | 民 | 行",
+           20
+          ],
+          [
+           7,
+           "圣 | 王 | 礼 | 故 | 无",
+           12
           ]
          ],
          "hovertemplate": "<b>Topic %{customdata[0]}</b><br>%{customdata[1]}<br>Size: %{customdata[2]}",
@@ -1088,16 +1093,17 @@
            "width": 2
           },
           "size": [
-           118,
-           60,
-           42,
-           40,
-           34,
-           28,
-           24
+           81,
+           67,
+           56,
+           55,
+           49,
+           36,
+           20,
+           12
           ],
           "sizemode": "area",
-          "sizeref": 0.07375,
+          "sizeref": 0.050625,
           "symbol": "circle"
          },
          "mode": "markers",
@@ -1106,23 +1112,25 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          6.704725742340088,
-          6.1191630363464355,
-          -9.801493644714355,
-          6.674530506134033,
-          7.425846099853516,
-          6.54274320602417,
-          -10.122069358825684
+          12.109625816345215,
+          20.02960205078125,
+          11.813169479370117,
+          3.913381814956665,
+          20.374095916748047,
+          4.661999225616455,
+          4.281097412109375,
+          11.467289924621582
          ],
          "xaxis": "x",
          "y": [
-          -7.9838690757751465,
-          -8.705592155456543,
-          10.79178524017334,
-          -7.428543567657471,
-          -7.863471508026123,
-          -9.120957374572754,
-          11.112175941467285
+          -1.9296627044677734,
+          32.334049224853516,
+          -1.6334912776947021,
+          7.560307502746582,
+          32.678585052490234,
+          6.812114238739014,
+          7.193068504333496,
+          -1.2874783277511597
          ],
          "yaxis": "y"
         }
@@ -1132,16 +1140,16 @@
          {
           "showarrow": false,
           "text": "D1",
-          "x": -11.640379762649536,
-          "y": 1.1449506759643553,
+          "x": 3.3263745427131655,
+          "y": 17.680630350112914,
           "yshift": 10
          },
          {
           "showarrow": false,
           "text": "D2",
-          "x": -1.5503283739089966,
+          "x": 13.378292423486709,
           "xshift": 10,
-          "y": 12.779002332687378
+          "y": 37.58037281036377
          }
         ],
         "height": 650,
@@ -1166,10 +1174,10 @@
            "width": 2
           },
           "type": "line",
-          "x0": -1.5503283739089966,
-          "x1": -1.5503283739089966,
-          "y0": -10.489100980758668,
-          "y1": 12.779002332687378
+          "x0": 13.378292423486709,
+          "x1": 13.378292423486709,
+          "y0": -2.2191121101379396,
+          "y1": 37.58037281036377
          },
          {
           "line": {
@@ -1177,10 +1185,10 @@
            "width": 2
           },
           "type": "line",
-          "x0": -11.640379762649536,
-          "x1": 8.539723014831543,
-          "y0": 1.1449506759643553,
-          "y1": 1.1449506759643553
+          "x0": 3.3263745427131655,
+          "x1": 23.430210304260253,
+          "y0": 17.680630350112914,
+          "y1": 17.680630350112914
          }
         ],
         "sliders": [
@@ -1196,6 +1204,7 @@
               "marker.color": [
                [
                 "red",
+                "#B0BEC5",
                 "#B0BEC5",
                 "#B0BEC5",
                 "#B0BEC5",
@@ -1220,6 +1229,7 @@
                 "#B0BEC5",
                 "#B0BEC5",
                 "#B0BEC5",
+                "#B0BEC5",
                 "#B0BEC5"
                ]
               ]
@@ -1236,6 +1246,7 @@
                 "#B0BEC5",
                 "#B0BEC5",
                 "red",
+                "#B0BEC5",
                 "#B0BEC5",
                 "#B0BEC5",
                 "#B0BEC5",
@@ -1258,6 +1269,7 @@
                 "red",
                 "#B0BEC5",
                 "#B0BEC5",
+                "#B0BEC5",
                 "#B0BEC5"
                ]
               ]
@@ -1276,6 +1288,7 @@
                 "#B0BEC5",
                 "#B0BEC5",
                 "red",
+                "#B0BEC5",
                 "#B0BEC5",
                 "#B0BEC5"
                ]
@@ -1296,6 +1309,7 @@
                 "#B0BEC5",
                 "#B0BEC5",
                 "red",
+                "#B0BEC5",
                 "#B0BEC5"
                ]
               ]
@@ -1315,12 +1329,33 @@
                 "#B0BEC5",
                 "#B0BEC5",
                 "#B0BEC5",
-                "red"
+                "red",
+                "#B0BEC5"
                ]
               ]
              }
             ],
             "label": "Topic 6",
+            "method": "update"
+           },
+           {
+            "args": [
+             {
+              "marker.color": [
+               [
+                "#B0BEC5",
+                "#B0BEC5",
+                "#B0BEC5",
+                "#B0BEC5",
+                "#B0BEC5",
+                "#B0BEC5",
+                "#B0BEC5",
+                "red"
+               ]
+              ]
+             }
+            ],
+            "label": "Topic 7",
             "method": "update"
            }
           ]
@@ -2204,8 +2239,8 @@
           1
          ],
          "range": [
-          -11.640379762649536,
-          8.539723014831543
+          3.3263745427131655,
+          23.430210304260253
          ],
          "title": {
           "text": ""
@@ -2219,8 +2254,8 @@
           1
          ],
          "range": [
-          -10.489100980758668,
-          12.779002332687378
+          -2.2191121101379396,
+          37.58037281036377
          ],
          "title": {
           "text": ""
@@ -3644,6 +3679,13 @@
    "source": [
     "topic_model3.save(\"bertopic_model.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
