--- a/02_cooccurence.ipynb
+++ b/02_cooccurence.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,17 +24,17 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: adjustText in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (1.1.1)\n",
-      "Requirement already satisfied: numpy in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from adjustText) (1.23.4)\n",
-      "Requirement already satisfied: scipy in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from adjustText) (1.9.2)\n",
       "Requirement already satisfied: matplotlib in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from adjustText) (3.9.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (2.8.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (4.37.4)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (0.11.0)\n",
+      "Requirement already satisfied: scipy in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from adjustText) (1.9.2)\n",
+      "Requirement already satisfied: numpy in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from adjustText) (1.23.4)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (1.0.5)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (3.0.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (23.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (1.4.4)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (4.37.4)\n",
       "Requirement already satisfied: pillow>=8 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (9.2.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (23.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (1.4.4)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (3.0.9)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from matplotlib->adjustText) (0.11.0)\n",
       "Requirement already satisfied: six>=1.5 in /Users/osakiyutaka/.pyenv/versions/3.10.4/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib->adjustText) (1.16.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
@@ -61,20 +61,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/data_cooccurrence.csv\")\n",
-    "df_ren = df[df[\"contain_ren\"]==True]\n",
-    "df_ren = df_ren.reset_index(drop=True)"
+    "df_ren = pd.read_csv('data/data_ren.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Item1</th>\n",
+       "      <th>Item2</th>\n",
+       "      <th>book</th>\n",
+       "      <th>chapter</th>\n",
+       "      <th>sentences_index</th>\n",
+       "      <th>contain_ren</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>End</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>510</td>\n",
+       "      <td>孝</td>\n",
+       "      <td>仁</td>\n",
+       "      <td>analects</td>\n",
+       "      <td>学而</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-480</td>\n",
+       "      <td>-350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>518</td>\n",
+       "      <td>弟</td>\n",
+       "      <td>仁</td>\n",
+       "      <td>analects</td>\n",
+       "      <td>学而</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-480</td>\n",
+       "      <td>-350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>525</td>\n",
+       "      <td>也</td>\n",
+       "      <td>仁</td>\n",
+       "      <td>analects</td>\n",
+       "      <td>学而</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-480</td>\n",
+       "      <td>-350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>531</td>\n",
+       "      <td>者</td>\n",
+       "      <td>仁</td>\n",
+       "      <td>analects</td>\n",
+       "      <td>学而</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-480</td>\n",
+       "      <td>-350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536</td>\n",
+       "      <td>其</td>\n",
+       "      <td>仁</td>\n",
+       "      <td>analects</td>\n",
+       "      <td>学而</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-480</td>\n",
+       "      <td>-350</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0.1  Unnamed: 0 Item1 Item2      book chapter  sentences_index  \\\n",
+       "0             0         510     孝     仁  analects      学而                5   \n",
+       "1             1         518     弟     仁  analects      学而                5   \n",
+       "2             2         525     也     仁  analects      学而                5   \n",
+       "3             3         531     者     仁  analects      学而                5   \n",
+       "4             4         536     其     仁  analects      学而                5   \n",
+       "\n",
+       "   contain_ren  Start  End  \n",
+       "0         True   -480 -350  \n",
+       "1         True   -480 -350  \n",
+       "2         True   -480 -350  \n",
+       "3         True   -480 -350  \n",
+       "4         True   -480 -350  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ren.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To "
+    "## To set time attributes"
    ]
   },
   {
